--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
+    "react-owl-carousel": "^2.3.3",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
